--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docs"]
 	path = docs
 	url = https://github.com/PytLab/gaft-docs.git
+[submodule "gasol/unittest/googletest"]
+	path = gasol/unittest/googletest
+	url = https://github.com/google/googletest.git
